<resources>
    <string name="app_name">beacon</string>

    <string name="defaultSenderId" translatable="false">YOUR_DEFAULT_SENDER_ID</string>

    <string name="txt_logo2">beacon</string>
    <string name="txt_login">로그인</string>
    <string name="txt_logout">로그아웃</string>
    <string name="txt_noLogin">로그인 없이 사용할래요</string>
    <string name="hint_id">아이디 입력</string>
    <string name="hint_pw">비밀번호 입력</string>
    <string name="txt_signup">회원가입</string>
    <string name="txt_setDiasaster1">알림 재난 선택</string>
    <string name="txt_setDiasaster2">알림 받고 싶은 재난을 선택하면\n재난 발생 시 알림을 발송합니다.</string>
    <string name="txt_setGuild">커스텀 가이드라인</string>
    <string name="txt_setGuild2">재난 발생 시 사용자가 미리 입력해둔 가이드라인을 제공합니다.</string>
    <string name="txt_signupPhrase">회원가입에 필요한\n정보를 기입해주세요!</string>
    <string name="txt_constraint_Id">6자 이상</string>
    <string name="txt_constraint_pw">비밀번호 입력</string>
    <string name="txt_constraint_confirm_pw">비밀번호 확인</string>
    <string name="setting_message">재난 메시지 관련</string>
    <string name="setting_alram">알림 받을 재난을 선택</string>
    <string name="setting_language">언어 설정</string>
    <string name="setting_guildline">가이드라인</string>
    <string name="setting_custom_guildline">커스텀 가이드라인 적용</string>
    <string name="setting_userInfor">회원정보</string>
    <string name="setting_logout">로그아웃</string>
    <string name="message_recent">최근 경보</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">다음</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="nav_home">홈</string>
    <string name="nav_message">재난 알림</string>
    <string name="nav_setting">설정</string>
    <string name="txt_logo1">당신의 안전한\n오늘을 위해</string>
    <string name="hint_email">이메일을 입력해주세요.</string>
    <string name="txt_email">이메일 입력</string>
    <string name="txt_pw_constraint">1개 이상 대소문자와 특수문자를 포함한 8-16</string>
    <string name="txt_click_guild">클릭하면 관련 가이드가 나와요!</string>
    <string name="basic_rules">기본 수칙</string>
    <string name="nearby_shelter">최근접 대피소</string>
    <string name="disas_heavy_rain">호우</string>
    <string name="disas_heavy_snow">대설</string>
    <string name="disas_Earthquake">지진</string>
    <string name="disas_Typhoon">태풍</string>
    <string name="disas_forest_fires">산불</string>
    <string name="disas_civil_defense">민방위</string>
    <string name="custom_guild_sample">휴대폰을 챙기세요\n\n가스불을 끄세요\n\n전기선을 뽑으세요</string>
    <string name="check_autoLogin">자동 로그인을 원하시면 체크해주세요!</string>
    <string name="dialog_blank">빈 칸이 존재합니다.</string>
    <string name="dialog_blank_txt">모든 칸을 작성해주세요!</string>
    <string name="dialog_notLule">규칙에 맞는 정보가 아닙니다!</string>
    <string name="dialog_rule">ID(6자이상) | PW(1개 이상 대소문자 및 특수문자를 포함) | 총 8~16인지 확인해주세요!</string>
    <string name="dialog_logout_gomain">성공 : 메인페이지로 이동합니다!</string>
    <string name="dialog_logout_noUser">실패 : 회원이 아닙니다!</string>
    <string name="dialog_lang">언어 설정</string>
    <string name="dialog_lang_gomain">적용을 위해 앱이 재시작됩니다.</string>
    <string name="main_noDisaster">지금은 재난이 없습니다!</string>
    <string name="dialog_signup_success">성공 : 로그인 페이지로 이동합니다!</string>
    <string name="dialog_email_dup">실패 : 이메일이 중복됩니다!</string>
    <string name="dialog_signup_fail">실패 : 이미 존재하는 아이디입니다.</string>
    <string name="dialog_signup_fail_common">회원가입 실패</string>
    <string name="login_fail">실패 : 입력한 정보를 다시 확인해주세요!</string>
    <string name="now_not_disaster">지금은 재난 사항이 없습니다!</string>
    <string name="guild_rule">가이드라인</string>
    <string name="guild_safezone">최근접 대피소</string>
    <string name="dialog_title">요청이 완료되었습니다!</string>
    <string name="fail_you_notUser">실패 : 회원이 아닙니다!</string>
    <string name="fail_title">실패했습니다.</string>

</resources>